--- a/lib/src/themes/minimal.css
+++ b/lib/src/themes/minimal.css
@@ -8,8 +8,8 @@
   --core-color-white: hsl(var(--core-color-ui-hue), 0%, 100%);
   --core-color-black: hsl(var(--core-color-ui-hue), 0%, 0%);
 
-  --core-color-focus: #fbcd83;
-  --core-focus-outline: none;
+  --core-color-focus: #83b6fb;
+  --core-focus-outline: 0px 0px 0px 4px var(--core-color-focus);
 
   --core-color-success-hue: 130;
   --core-color-success: hsl(var(--core-color-success-hue), 48%, 44%);
@@ -107,13 +107,6 @@
   --core-timing-function-ease-in-out: ease-in-out;
 }
 
-body.tabbed,
-body.tabbed :focus {
-  --core-focus-outline: 0px 0px 0px 4px var(--core-color-focus);
-  outline: 0;
-  box-shadow: var(--core-focus-outline);
-}
-
 [mode="dark"] {
   --core-color-primary-hue: 240;
   --core-color-primary: hsl(var(--core-color-primary-hue), 100%, 80%);
@@ -162,4 +155,8 @@ body {
   color: var(--core-color-font);
   font-family: var(--core-font-family);
   background-color: var(--core-color-white);
+}
+
+body:not(.tabbed) {
+  --core-focus-outline: none;
 }
