update to docs and some elements

--- a/docs/src/styles/github-markdown.css
+++ b/docs/src/styles/github-markdown.css
@@ -431,7 +431,7 @@
 }
 
 .markdown-body .bg-white {
-  background-color: #fff !important;
+  background-color: #fff;
 }
 
 .markdown-body .bg-gray-weak {
