--- a/lib/src/components/tabs/tabs.css
+++ b/lib/src/components/tabs/tabs.css
@@ -15,6 +15,7 @@
   display: inline-flex;
   align-items: center;
   overflow-x: scroll;
+  overflow-y: visible;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
   height: auto;
