--- a/lib/src/components/grid/grid.css
+++ b/lib/src/components/grid/grid.css
@@ -54,10 +54,18 @@
   }
 }
 
+:host([gap="none"]) {
+  --core-grid-gap: none;
+}
+
 @each $i in sm, md, lg, xl {
   :host([gap-sm="$(i)"]) {
     --core-grid-gap: var(--core-space-$(i));
   }
+}
+
+:host([gap-sm="none"]) {
+  --core-grid-gap: none;
 }
 
 @media (min-width: 800px) {
@@ -65,6 +73,9 @@
     :host([gap-md="$(i)"]) {
       --core-grid-gap: var(--core-space-$(i));
     }
+  }
+  :host([gap-md="none"]) {
+    --core-grid-gap: none;
   }
 }
 
@@ -74,6 +85,9 @@
       --core-grid-gap: var(--core-space-$(i));
     }
   }
+  :host([gap-lg="none"]) {
+    --core-grid-gap: none;
+  }
 }
 
 @media (min-width: 1400px) {
@@ -81,5 +95,8 @@
     :host([gap-xl="$(i)"]) {
       --core-grid-gap: var(--core-space-$(i));
     }
+  }
+  :host([gap-xl="none"]) {
+    --core-grid-gap: none;
   }
 }
