--- a/lib/src/components/checkbox/checkbox.css
+++ b/lib/src/components/checkbox/checkbox.css
@@ -35,7 +35,7 @@
 }
 
 :host(:hover) {
-  --box-background: var(--core-color-ui-weak);
+  --box-border-color: var(--core-color-ui-strong);
 }
 
 :host([disabled]) {
