--- a/lib/src/components/box/box.css
+++ b/lib/src/components/box/box.css
@@ -29,24 +29,27 @@
   text-align: left;
 }
 
-@each $i in primary, primary-weak, primary-strong, secondary, secondary-weak,
-  secondary-strong, success, warning, danger, ui-weak, ui-strong, white, black
+@each $i in primary, primary-weak, primary-strong, success, success-strong,
+  success-weak, warning, warning-weak, warning-strong, danger, danger-weak,
+  danger-strong, ui, ui-weak, ui-strong, white, black
 {
   :host([bg="$(i)"]) {
     background-color: var(--core-color-$(i));
   }
 }
 
-@each $i in primary, success, warning, danger, ui, ui-weak, ui-strong, white,
-  black
+@each $i in primary, primary-weak, primary-strong, success, success-strong,
+  success-weak, warning, warning-weak, warning-strong, danger, danger-weak,
+  danger-strong, ui, ui-weak, ui-strong, white, black
 {
   :host([color="$(i)"]) {
     color: var(--core-color-$(i));
   }
 }
 
-@each $i in primary, success, warning, danger, ui, ui-weak, ui-strong, white,
-  black
+@each $i in primary, primary-weak, primary-strong, success, success-strong,
+  success-weak, warning, warning-weak, warning-strong, danger, danger-weak,
+  danger-strong, ui, ui-weak, ui-strong, white, black
 {
   :host([border="$(i)"]) {
     border: var(--core-border-width-sm) solid var(--core-color-$(i));
