--- a/lib/src/themes/minimal.css
+++ b/lib/src/themes/minimal.css
@@ -4,6 +4,8 @@
   --core-color-primary: hsl(var(--core-color-primary-hue), 100%, 60%);
   --core-color-primary-hover: hsl(var(--core-color-primary-hue), 100%, 50%);
   --core-color-primary-contrast: white;
+  --core-color-primary-weak: hsl(var(--core-color-primary-hue), 100%, 70%);
+  --core-color-primary-strong: hsl(var(--core-color-primary-hue), 100%, 40%);
 
   --core-color-white: hsl(var(--core-color-ui-hue), 0%, 100%);
   --core-color-black: hsl(var(--core-color-ui-hue), 0%, 0%);
@@ -15,16 +17,22 @@
   --core-color-success: hsl(var(--core-color-success-hue), 48%, 80%);
   --core-color-success-hover: hsl(var(--core-color-success-hue), 48%, 75%);
   --core-color-success-contrast: hsl(var(--core-color-success-hue), 48%, 20%);
+  --core-color-success-weak: hsl(var(--core-color-success-hue), 100%, 70%);
+  --core-color-success-strong: hsl(var(--core-color-success-hue), 100%, 40%);
 
   --core-color-warning-hue: 46;
   --core-color-warning: hsl(var(--core-color-warning-hue), 70%, 80%);
   --core-color-warning-hover: hsl(var(--core-color-warning-hue), 70%, 75%);
   --core-color-warning-contrast: hsl(var(--core-color-warning-hue), 48%, 25%);
+  --core-color-warning-weak: hsl(var(--core-color-warning-hue), 100%, 70%);
+  --core-color-warning-strong: hsl(var(--core-color-warning-hue), 100%, 40%);
 
   --core-color-danger-hue: 349;
   --core-color-danger: hsl(var(--core-color-danger-hue), 70%, 80%);
   --core-color-danger-hover: hsl(var(--core-color-danger-hue), 70%, 75%);
   --core-color-danger-contrast: hsl(var(--core-color-danger-hue), 48%, 30%);
+  --core-color-danger-weak: hsl(var(--core-color-danger-hue), 100%, 70%);
+  --core-color-danger-strong: hsl(var(--core-color-danger-hue), 100%, 40%);
 
   --core-color-ui-hue: var(--core-color-primary-hue);
   --core-color-ui: hsl(var(--core-color-ui-hue), 10%, 85%);
